// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component <Header /> error messages should render custom error 1`] = `
<div
  className=" header header--invalid"
>
  <div
    className="header__label"
  >
    naam
    <span
      className="header--not-required"
    >
      (optioneel)
    </span>
  </div>
  <div
    className="header__subtitle"
  />
  <div
    className="header__errors"
  >
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    >
      custom error message
    </div>
  </div>
  <Header__Children />
</div>
`;

exports[`Form component <Header /> error messages should render email error 1`] = `
<div
  className=" header header--invalid"
>
  <div
    className="header__label"
  >
    naam
    <span
      className="header--not-required"
    >
      (optioneel)
    </span>
  </div>
  <div
    className="header__subtitle"
  />
  <div
    className="header__errors"
  >
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    >
      Het moet een geldig e-mailadres zijn
    </div>
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    />
  </div>
  <Header__Children />
</div>
`;

exports[`Form component <Header /> error messages should render maxLength error 1`] = `
<div
  className=" header header--invalid"
>
  <div
    className="header__label"
  >
    naam
    <span
      className="header--not-required"
    >
      (optioneel)
    </span>
  </div>
  <div
    className="header__subtitle"
  />
  <div
    className="header__errors"
  >
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    >
      U kunt maximaal 666 tekens invoeren.
    </div>
    <div
      className="header__errors__item"
    />
  </div>
  <Header__Children />
</div>
`;

exports[`Form component <Header /> error messages should render no error when element is only touched 1`] = `
<div
  className=" header "
>
  <div
    className="header__label"
  >
    naam
    <span
      className="header--not-required"
    >
      (optioneel)
    </span>
  </div>
  <div
    className="header__subtitle"
  />
  <div
    className="header__errors"
  >
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    />
  </div>
  <Header__Children />
</div>
`;

exports[`Form component <Header /> error messages should render optional field message 1`] = `
<div
  className=" header "
>
  <div
    className="header__label"
  >
    naam
    <span
      className="header--not-required"
    >
      (optioneel)
    </span>
  </div>
  <div
    className="header__subtitle"
  />
  <div
    className="header__errors"
  >
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    />
  </div>
  <Header__Children />
</div>
`;

exports[`Form component <Header /> error messages should render required error 1`] = `
<div
  className=" header header--invalid"
>
  <div
    className="header__label"
  >
    naam
    <span
      className="header--not-required"
    >
      (optioneel)
    </span>
  </div>
  <div
    className="header__subtitle"
  />
  <div
    className="header__errors"
  >
    <div
      className="header__errors__item"
    >
      Dit is een verplicht veld
    </div>
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    />
  </div>
  <Header__Children />
</div>
`;

exports[`Form component <Header /> should render correctly 1`] = `
<div
  className=" header "
>
  <div
    className="header__label"
  >
    naam
    <span
      className="header--not-required"
    >
      (optioneel)
    </span>
  </div>
  <div
    className="header__subtitle"
  />
  <div
    className="header__errors"
  >
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    />
  </div>
  <Header__Children />
</div>
`;

exports[`Form component <Header /> should render when label is not available 1`] = `
<div
  className=" header "
>
  <div
    className="header__label"
  />
  <div
    className="header__subtitle"
  />
  <div
    className="header__errors"
  >
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    />
    <div
      className="header__errors__item"
    />
  </div>
  <Header__Children />
</div>
`;
